--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
+    
     <style>
 
         body {
@@ -234,7 +235,7 @@
             <h2>About Us</h2>
         </div>
         <img src="" alt="me">
-    </div>
+    </div
 </main>
 <footer class="footer">
     <div class="copy">&copy;  Hotella</div>
