--- a/src/main/resources/templates/paymentConfirmation.html
+++ b/src/main/resources/templates/paymentConfirmation.html
@@ -1,687 +1,39 @@
-<!--
-
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Payment Confirmation</title>
-</head>
-<body>
-<div class="container">
-    <h2>Payment Successfull</h2>
-    <p>Your payment has been processed successfully.</p>
-</div>
-</body>
-</html>
--->
-
 <!DOCTYPE html>
 <html lang="en" xmlns: th="http://www.thymeleaf.org" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible"
-          content="IE=edge">
-    <meta name="viewport"
-          content="width=device-width,
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,
 				initial-scale=1.0">
     <title>Hotella</title>
-    <link rel="stylesheet"
-          href="style.css">
-    <link rel="stylesheet"
-          href="responsive.css">
-
-    <script>
-        let menuicn = document.querySelector(".menuicn");
-        let nav = document.querySelector(".navcontainer");
-
-        menuicn.addEventListener("click", () => {
-            nav.classList.toggle("navclose");
-        })
-
-    </script>
-
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
+    <!-- for header part -->
+    <div th:replace="fragments/header :: header"></div>
+    <div class="main-container">
+        
+        <div th:replace="fragments/navbar :: navbar"></div>
 
-<style>
-    /* Main CSS Here */
+        <div class="main">
 
-    @import url(
-    "https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
-    * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-    }
-    :root {
-    --background-color1: #fafaff;
-    --background-color2: #ffffff;
-    --background-color3: #ededed;
-    --background-color4: #cad7fda4;
-    --primary-color: #4b49ac;
-    --secondary-color: #0c007d;
-    --Border-color: #3f0097;
-    --one-use-color: #3f0097;
-    --two-use-color: #5500cb;
-    }
-    body {
-    background-color: var(--background-color4);
-    max-width: 100%;
-    overflow-x: hidden;
-    }
-
-    header {
-    height: 70px;
-    width: 100vw;
-    padding: 0 30px;
-    background-color: var(--background-color1);
-    position: fixed;
-    z-index: 100;
-    box-shadow: 1px 1px 15px rgba(161, 182, 253, 0.825);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    }
-
-    .logo {
-    font-size: 27px;
-    font-weight: 600;
-    color: rgb(47, 141, 70);
-    }
-
-    .icn {
-    height: 30px;
-    }
-    .menuicn {
-    cursor: pointer;
-    }
-
-    .searchbar,
-    .message,
-    .logosec {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    }
-
-    .searchbar2 {
-    display: none;
-    }
-
-    .logosec {
-    gap: 60px;
-    }
-
-    .searchbar input {
-    width: 250px;
-    height: 42px;
-    border-radius: 50px 0 0 50px;
-    background-color: var(--background-color3);
-    padding: 0 20px;
-    font-size: 15px;
-    outline: none;
-    border: none;
-    }
-    .searchbtn {
-    width: 50px;
-    height: 42px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 0px 50px 50px 0px;
-    background-color: var(--secondary-color);
-    cursor: pointer;
-    }
-
-    .message {
-    gap: 40px;
-    position: relative;
-    cursor: pointer;
-    }
-    .circle {
-    height: 7px;
-    width: 7px;
-    position: absolute;
-    background-color: #fa7bb4;
-    border-radius: 50%;
-    left: 19px;
-    top: 8px;
-    }
-    .dp {
-    height: 40px;
-    width: 40px;
-    background-color: #626262;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    }
-    .main-container {
-    display: flex;
-    width: 100vw;
-    position: relative;
-    top: 70px;
-    z-index: 1;
-    }
-    .dpicn {
-    height: 42px;
-    }
-
-    .main {
-    height: calc(100vh - 70px);
-    width: 100%;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    padding: 40px 30px 30px 30px;
-    }
-
-    .main::-webkit-scrollbar-thumb {
-    background-image:
-            linear-gradient(to bottom, rgb(0, 0, 85), rgb(0, 0, 50));
-    }
-    .main::-webkit-scrollbar {
-    width: 5px;
-    }
-    .main::-webkit-scrollbar-track {
-    background-color: #9e9e9eb2;
-    }
-
-    .box-container {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 50px;
-    }
-    .nav {
-    min-height: 91vh;
-    width: 250px;
-    background-color: var(--background-color2);
-    position: absolute;
-    top: 0px;
-    left: 00;
-    box-shadow: 1px 1px 10px rgba(198, 189, 248, 0.825);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    overflow: hidden;
-    padding: 30px 0 20px 10px;
-    }
-    .navcontainer {
-    height: calc(100vh - 70px);
-    width: 250px;
-    position: relative;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    transition: all 0.5s ease-in-out;
-    }
-    .navcontainer::-webkit-scrollbar {
-    display: none;
-    }
-    .navclose {
-    width: 80px;
-    }
-    .nav-option {
-    width: 250px;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    padding: 0 30px 0 20px;
-    gap: 20px;
-    transition: all 0.1s ease-in-out;
-    }
-    .nav-option:hover {
-    border-left: 5px solid #a2a2a2;
-    background-color: #dadada;
-    cursor: pointer;
-    }
-    .nav-img {
-    height: 30px;
-    }
-
-    .nav-upper-options {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
-    }
-
-    .option1 {
-    border-left: 5px solid #010058af;
-    background-color: var(--Border-color);
-    color: white;
-    cursor: pointer;
-    }
-    .option1:hover {
-    border-left: 5px solid #010058af;
-    background-color: var(--Border-color);
-    }
-    .box {
-    height: 130px;
-    width: 230px;
-    border-radius: 20px;
-    box-shadow: 3px 3px 10px rgba(0, 30, 87, 0.751);
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    cursor: pointer;
-    transition: transform 0.3s ease-in-out;
-    }
-    .box:hover {
-    transform: scale(1.08);
-    }
-
-    .box:nth-child(1) {
-    background-color: var(--one-use-color);
-    }
-    .box:nth-child(2) {
-    background-color: var(--two-use-color);
-    }
-    .box:nth-child(3) {
-    background-color: var(--one-use-color);
-    }
-    .box:nth-child(4) {
-    background-color: var(--two-use-color);
-    }
-
-    .box img {
-    height: 50px;
-    }
-    .box .text {
-    color: white;
-    }
-    .topic {
-    font-size: 13px;
-    font-weight: 40;
-    letter-spacing: 1px;
-    }
-
-    .topic-heading {
-    font-size: 30px;
-    letter-spacing: 3px;
-    }
-
-    .report-container {
-    min-height: 300px;
-    max-width: 1200px;
-    margin: 10px auto 0px auto;
-    background-color: #ffffff;
-    border-radius: 30px;
-    box-shadow: 3px 3px 10px rgb(188, 188, 188);
-    padding: 30px 20px 20px 20px;
-    }
-    .report-header {
-    height: 80px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 20px 10px 20px;
-    border-bottom: 2px solid rgba(0, 20, 151, 0.59);
-    }
-
-    .recent-Articles {
-    font-size: 30px;
-    font-weight: 600;
-    color: #5500cb;
-    }
-
-    .view {
-    height: 35px;
-    width: 90px;
-    border-radius: 8px;
-    background-color: #5500cb;
-    color: white;
-    font-size: 15px;
-    border: none;
-    cursor: pointer;
-    }
-
-    .report-body {
-    max-width: 1160px;
-    overflow-x: auto;
-    padding: 20px;
-    }
-    .report-topic-heading,
-    .item1 {
-    width: 1120px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    }
-    .t-op {
-    font-size: 18px;
-    letter-spacing: 0px;
-    }
-
-    .items {
-    width: 1120px;
-    margin-top: 15px;
-    }
-
-    .item1 {
-    margin-top: 20px;
-    }
-    .t-op-nextlvl {
-    font-size: 14px;
-    letter-spacing: 0px;
-    font-weight: 60;
-    }
-
-    .label-tag {
-    width: 100px;
-    text-align: center;
-    background-color: rgb(0, 177, 0);
-    color: white;
-    border-radius: 4px;
-    }
-</style>
-<!-- for header part -->
-<header>
-
-    <div class="logosec">
-        <div class="logo">Hotella</div>
-        <img src=
-                     "https://media.geeksforgeeks.org/wp-content/uploads/20221210182541/Untitled-design-(30).png"
-             class="icn menuicn"
-             id="menuicn"
-             alt="menu-icon">
-    </div>
-
-    <div class="searchbar">
-        <input type="text"
-               placeholder="Search">
-        <div class="searchbtn">
-            <img src=
-                         "https://media.geeksforgeeks.org/wp-content/uploads/20221210180758/Untitled-design-(28).png"
-                 class="icn srchicn"
-                 alt="search-icon">
-        </div>
-    </div>
-
-    <div class="message">
-        <div class="circle"></div>
-        <img src=
-                     "https://media.geeksforgeeks.org/wp-content/uploads/20221210183322/8.png"
-             class="icn"
-             alt="">
-        <div class="dp">
-            <img src=
-                         "https://media.geeksforgeeks.org/wp-content/uploads/20221210180014/profile-removebg-preview.png"
-                 class="dpicn"
-                 alt="dp">
-        </div>
-    </div>
-
-</header>
-
-<div class="main-container">
-    <div class="navcontainer">
-        <nav class="nav">
-            <div class="nav-upper-options">
-                <div class="nav-option option1">
-                    <img src=
-                                 "https://media.geeksforgeeks.org/wp-content/uploads/20221210182148/Untitled-design-(29).png"
-                         class="nav-img"
-                         alt="dashboard">
-                    <h3> Dashboard</h3>
+            <div class="searchbar2">
+                <input type="text" name="" id="" placeholder="Search">
+                <div class="searchbtn">
+                    <img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210180758/Untitled-design-(28).png"
+                        class="icn srchicn" alt="search-button">
                 </div>
-
-                <div class="option2 nav-option">
-                    <img src=
-                                 "https://media.geeksforgeeks.org/wp-content/uploads/20221210183322/9.png"
-                         class="nav-img"
-                         alt="articles">
-                    <h3><a href="room.html" style="text-decoration:none">Room</a></h3>
-                </div>
-
-                <div class="nav-option option3">
-                    <img src=
-                                 "https://media.geeksforgeeks.org/wp-content/uploads/20221210183320/5.png"
-                         class="nav-img"
-                         alt="report">
-                    <h3><a href="feedback.html" style="text-decoration:none">Feedback</a></h3>
-                </div>
-
-                <div class="nav-option option4">
-                    <img src=
-                                 "https://media.geeksforgeeks.org/wp-content/uploads/20221210183321/6.png"
-                         class="nav-img"
-                         alt="institution">
-                    <h3><a href="canteen.html" style="text-decoration:none">Canteen</a></h3>
-                </div>
-
-                <div class="nav-option option5">
-                    <img src=
-                                 "https://media.geeksforgeeks.org/wp-content/uploads/20221210183323/10.png"
-                         class="nav-img"
-                         alt="blog">
-                    <h3> Profile</h3>
-                </div>
-                <div class="nav-option logout">
-                    <img src=
-                                 "https://media.geeksforgeeks.org/wp-content/uploads/20221210183321/7.png"
-                         class="nav-img"
-                         alt="logout">
-                    <h3>Logout</h3>
-                </div>
-
             </div>
-        </nav>
-    </div>
-    <div class="main">
-
-        <div class="searchbar2">
-            <input type="text"
-                   name=""
-                   id=""
-                   placeholder="Search">
-            <div class="searchbtn">
-                <img src=
-                             "https://media.geeksforgeeks.org/wp-content/uploads/20221210180758/Untitled-design-(28).png"
-                     class="icn srchicn"
-                     alt="search-button">
-            </div>
-        </div>
-        <div class="report-container">
-            <style>
-                body {
-                    margin: 0;
-                    box-sizing: border-box;
-                    margin-top: 0px;
-                }
-
-                /* CSS for header */
-                .header {
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: center;
-                    background-color: #f5f5f5;
-                }
-
-                .header .logo {
-                    font-size: 25px;
-                    font-family: 'Sriracha', cursive;
-                    color: #000;
-                    text-decoration: none;
-                    margin-left: 30px;
-                }
-
-                .nav-items {
-                    display: flex;
-                    justify-content: space-around;
-                    align-items: center;
-                    background-color: #f5f5f5;
-                    margin-right: 20px;
-                }
-
-                .nav-items a {
-                    text-decoration: none;
-                    color: #000;
-                    padding: 35px 20px;
-                }
-
-                /* CSS for main element */
-                .intro {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-                    width: 100%;
-                    height: 520px;
-                    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url("https://www.bpimaging.com/assets/uploads/2015/02/hotel-photography-exterior-quality-inn-suites.jpg");
-                    background-size: cover;
-                    background-position: center;
-                    background-repeat: no-repeat;
-                }
-
-                .intro h1 {
-                    font-family: sans-serif;
-                    font-size: 60px;
-                    color: #fff;
-                    font-weight: bold;
-                    text-transform: uppercase;
-                    margin: 0;
-                }
-
-                .intro p {
-                    font-size: 20px;
-                    color: #d1d1d1;
-                    text-transform: uppercase;
-                    margin: 20px 0;
-                }
-
-                .intro button {
-                    background-color: #5edaf0;
-                    color: #000;
-                    padding: 10px 25px;
-                    border: none;
-                    border-radius: 5px;
-                    font-size: 20px;
-                    font-weight: bold;
-                    cursor: pointer;
-                    box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.4)
-                }
-
-                .achievements {
-                    display: flex;
-                    justify-content: space-around;
-                    align-items: center;
-                    padding: 40px 80px;
-                }
-
-                .achievements .work {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-                    padding: 0 40px;
-                }
-
-                .achievements .work i {
-                    width: fit-content;
-                    font-size: 50px;
-                    color: #333333;
-                    border-radius: 50%;
-                    border: 2px solid #333333;
-                    padding: 12px;
-                }
-
-                .achievements .work .work-heading {
-                    font-size: 20px;
-                    color: #756f6f;
-                    text-transform: uppercase;
-                    margin: 10px 0;
-                }
-
-                .achievements .work .work-text {
-                    font-size: 15px;
-                    color: #807676;
-                    margin: 10px 0;
-                }
-
-                .about-me {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    padding: 40px 80px;
-                    border-top: 20px solid #eeeeee;
-                }
-
-                .about-me img {
-                    width: 500px;
-                    max-width: 100%;
-                    height: auto;
-                    border-radius: 10px;
-                }
-
-                .about-me-text h2 {
-                    font-size: 30px;
-                    color: #333333;
-                    text-transform: uppercase;
-                    margin: 0;
-                }
-
-                .about-me-text p {
-                    font-size: 15px;
-                    color: #585858;
-                    margin: 10px 0;
-                }
-
-                /* CSS for footer */
-                .footer {
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: center;
-                    background-color: #302f49;
-                    padding: 40px 80px;
-                }
-
-                .footer .copy {
-                    color: #fff;
-                }
-
-                .bottom-links {
-                    display: flex;
-                    justify-content: space-around;
-                    align-items: center;
-                    padding: 40px 0;
-                }
-
-                .bottom-links .links {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-                    padding: 0 40px;
-                }
-
-                .bottom-links .links span {
-                    font-size: 20px;
-                    color: #fff;
-                    text-transform: uppercase;
-                    margin: 10px 0;
-                }
-
-                .bottom-links .links a {
-                    text-decoration: none;
-                    color: #a1a1a1;
-                    padding: 10px 20px;
-                }
-            </style>
-            <div class="container">
-                <h2>Payment Successfull</h2>
-                <p>Your payment has been processed successfully.</p>
+            <div class="report-container">
+                <div class="container">
+                    <h2>Payment Successfull</h2>
+                    <p>Your payment has been processed successfully.</p>
+                </div>
             </div>
         </div>
     </div>
-</div>
 </body>
+
 </html>
