--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,6 +31,34 @@
 
                 <main>
                     <div class="intro">
+                        <style>
+                            .intro {
+                 display: flex;
+                 flex-direction: column;
+                 justify-content: center;
+                 align-items: center;
+                 width: 100%;
+                 height: 520px;
+                 background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url("https://www.bpimaging.com/assets/uploads/2015/02/hotel-photography-exterior-quality-inn-suites.jpg");
+                 background-size: cover;
+                 background-position: center;
+                 background-repeat: no-repeat;
+             }            .intro h1 {
+                          font-family: sans-serif;
+                          font-size: 60px;
+                          color: #fff;
+                          font-weight: bold;
+                          text-transform: uppercase;
+                          margin: 0;
+                      }
+
+                      .intro p {
+                          font-size: 20px;
+                          color: #d1d1d1;
+                          text-transform: uppercase;
+                          margin: 20px 0;
+                      }
+                        </style>
                         <h1>Hotella</h1>
                         <p>Book room as per your choice!!</p>
                         <!-- <button>
@@ -48,7 +76,7 @@
                         <div class="about-me-text">
                             <h2>About Us</h2>
                         </div>
-                        <img src="" alt="me">
+
                     </div>
                 </main>
             </div>
