Booking summary page added

--- a/src/main/resources/templates/paymentConfirmation.html
+++ b/src/main/resources/templates/paymentConfirmation.html
@@ -28,7 +28,7 @@
             </div>
             <div class="report-container">
                 <div class="container">
-                    <h2>Payment Successfull</h2>
+                    <h2>Payment Successful</h2>
                     <p>Your payment has been processed successfully.</p>
                 </div>
             </div>
