--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -332,3 +332,10 @@
     color: white;
     border-radius: 4px;
     }
+
+    .table-border {
+        table, th, td {
+          border: 1px solid black;
+          border-collapse: collapse;
+        }
+    }
