--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -12,7 +12,7 @@
                     <img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210183322/9.png" class="nav-img"
                         alt="articles">
                   <!--  <h3><a href="room_booking.html" style="text-decoration:none">Room</a></h3>  -->
-                    <h3><a th:href="room" style="text-decoration:none">Room</a></h3>
+                    <h3><a th:href="room-booking" style="text-decoration:none">Room</a></h3>
                 </div>
 
                 <div class="nav-option option3">
